--- a/package.json
+++ b/package.json
@@ -18,6 +18,20 @@
   },
   "homepage": "https://github.com/guilherme-cavalcanti/template-ts#readme",
   "devDependencies": {
-    "git-commit-msg-linter": "^2.4.3"
+    "@types/jest": "^26.0.0",
+    "@types/node": "^14.0.13",
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "eslint": "^7.2.0",
+    "eslint-config-standard-with-typescript": "^16.0.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "git-commit-msg-linter": "^2.4.3",
+    "husky": "^4.2.5",
+    "jest": "^26.0.1",
+    "lint-staged": "^10.2.11",
+    "ts-jest": "^26.1.0",
+    "typescript": "^3.9.5"
   }
 }
